--- a/components/actualites/actualites.css
+++ b/components/actualites/actualites.css
@@ -13,3 +13,18 @@ max-height: 300px;
     background-repeat: no-repeat !important;
     background-size: cover !important;
 }
+.imagestyle{
+  width: 100%; 
+  height: 300px;
+  object-fit: cover
+}
+
+
+.imagestylee{
+  width: 100%; 
+  height: 280px;
+  object-fit: cover
+}
+.imagestylee:hover{
+  cursor: pointer;
+}
