--- a/components/apropos/apropos.css
+++ b/components/apropos/apropos.css
@@ -1,6 +1,6 @@
 .p-apropos{
     text-align: justify;
-margin-top: 11%;}
+margin-top: 8%;}
 
 
 @media only screen and (max-width: 600px) {
@@ -10,3 +10,33 @@ margin-top: 11%;}
     margin-top: 0%;}
     
 }
+.overlay:before{
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+     background: linear-gradient(to bottom, rgba(255,255,255,0.0), rgba(0,0,0,0.7)); /* From top to bottom */
+
+     
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 41.0%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    background: #000;
+    border: 5px solid #009641;
+    margin: auto; /* Center the video horizontally */
+  }
+
+  .video-container video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
