--- a/components/chifrescles/chifrescle.css
+++ b/components/chifrescles/chifrescle.css
@@ -5,7 +5,9 @@
     stroke-width:4px;
     transition: fill 0.3s;
 }
-
+svg:hover{
+    cursor:pointer
+}
 .mapdiv polygon{
     fill: #f4f8ff;
     stroke:  #00225a;
